# ecs

./: README.md  pyproject.toml
core/: __init__.py  array_wrapper.py  component.py  event.py  system.py  utils.py  world.py
core/sparse/: sparse_component.py
ecs/: __init__.py  array_wrapper.py  component.py  event.py  resources.py  system.py  world.py
sparse/: array_wrapper.py  sparse_component.py
tests/: test_array_wrapper.py  test_component.py  test_events.py  test_world.py
tests/examples/: gravity_sim.py
