[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecs-python"
version = "0.1.1"
description = "Entity Component System for python"
authors = [
    { name="danbr123"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.2.3",
]

[tool.setuptools]
packages = ["ecs"]  # replace with your package's folder name
